# password-manager

./: Cargo.toml  database.db  diesel.toml
migrations/2024-12-19-193542_create_posts/: up.sql
migrations/2024-12-29-235413_users/: up.sql
src/: lib.rs  main.rs  models.rs
