[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
simple-log = "1.6.0"
log = "0.4.17"
diesel = { version = "2.2.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy ="0.15"

#[dependencies.rocket_db_pools]
#version = "0.2.0"
#features = ["diesel_sqlite"]
